--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@ ul.no-bullets {
     
     <section id="home" class="container">
         <div class="row">
-            <div class="col-md-6 profile-pic" style="margin-bottom: 5px;">
-                <img src="https://scontent.fblr22-1.fna.fbcdn.net/v/t39.30808-6/330905301_1296720567553562_3274463207546428106_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=e3f864&_nc_ohc=O7nPSrfLRbIAX9Vp5WL&_nc_ht=scontent.fblr22-1.fna&oh=00_AfB5e3yw-vtDQS2AUzcXznw3Xo8sN4MKR1ZzWBDqOMlTCg&oe=64EF5855" alt="Shubham Ekkaldevi" style="width: 40%; height: 80%;">
+            <div class="col-md-6 profile-pic" style="margin-bottom: 20px; margin-top: 10px">
+                <img src="Shubhi.jpg" alt="Shubham Ekkaldevi" style="width: 50%; height: 90%; border-radius: 0; border: 2px solid black;">
             </div>
             <div class="col-md-6 introduction animate__animated animate__slideInLeft" style="height: 300px;">
                 <h2>Hello, I'm Shubham Ekkaldevi</h2>
