--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             >
               <h3>WEBUI - Enhancing User Interface for Switches and Routers</h3>
               <h5>Cisco · Apprenticeship</h5>
-              <h5>Dec 2022 - Present · 9 mos · Bengaluru, Karnataka, India</h5>
+              <h5>Dec 2022 - Present  · Bengaluru, Karnataka, India</h5>
             </div>
           </div>
           <div class="project-description">
