--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKKN0D3LytgP2BezaOwmiXi2K1j2g5JZuAxYOXFh5e6g&s"
                       alt="Institute 2 Logo"
                     />
-                    Complete Java Full Stack Development (Simplilearn)
+                    <a href="https://drive.google.com/file/d/1jCW1IzbsaAAn4us6O1-XKXeABJnNBcsV/view?usp=sharing" title="Java">Complete Java Full Stack Development (Simplilearn)</a>
                   </li>
                 </ul>
                 <ul>
@@ -318,7 +318,7 @@
                       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKKN0D3LytgP2BezaOwmiXi2K1j2g5JZuAxYOXFh5e6g&s"
                       alt="Institute 2 Logo"
                     />
-                    Implement OOPS using Java with D.S (SIMPLILEARN)
+                     <a href="https://drive.google.com/file/d/1fG4GVARpe5wU_S6cdl9JRu1aq09kK65_/view?usp=sharing" title="Java">Implement OOPS using Java with D.S (SIMPLILEARN)</a>
                   </li>
                 </ul>
                 <ul>
